
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( gtest/djdec )
add_subdirectory ( gtest/equiv )
add_subdirectory ( gtest/techmap/sbjgraph )
add_subdirectory ( lua_magus )
add_subdirectory ( programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================



# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================
