
# ===================================================================
# インクルードパスの設定
# ===================================================================


# ===================================================================
# サブディレクトリの設定
# ===================================================================

set ( TESTDATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data )

add_subdirectory ( gtest )
add_subdirectory ( programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================



# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================
