
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  include
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( sbjgraph )
add_subdirectory ( lutmap )
add_subdirectory ( cellmap )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
