## Process this file with automake to produce Makefile.in


############################################################
## サブディレクトリの指定
############################################################

SUBDIRS =


############################################################
## clean ターゲットの指定
############################################################

CLEANFILES =

MAINTAINERCLEANFILES = Makefile.in


############################################################
## dist ターゲットの指定
############################################################

EXTRA_DIST =


############################################################
## 汎用のプリプロセッサ用フラグの指定
############################################################

noinst_HEADERS = \
	TclBase.h \
	TclCmd.h \
	TclHandler.h \
	TclObj.h \
	TclObjMsgHandler.h \
	TclPopt.h \
	TclVarTrace.h \
	tclpp_nsdef.h
