# Process this file with autoconf to produce a configure script

# ===================================================================
# Initial block
# ===================================================================
AC_INIT([libym_cell], [1.0],
        [yusuke_matsunaga@ieee.org],
        [libym_cell])dnl

AC_REVISION($Rev: 2507 $)dnl

AC_PREREQ(2.57)dnl

AC_COPYRIGHT([
Copyright (C) 2005-2010 Yusuke Matsunaga
All rights reserved.
])dnl

AC_CONFIG_SRCDIR([ym_cell/cell_nsdef.h])dnl

AC_CONFIG_AUX_DIR([config])dnl
AC_CONFIG_MACRO_DIR([config])dnl
AC_SUBST(ac_aux_dir)dnl

AM_INIT_AUTOMAKE()dnl


# ===================================================================
# Checks for programs
# ===================================================================
AC_ISC_POSIX
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_LIBTOOL

if test $enable_shared = no; then
  AC_DEFINE(BUILD_STATIC, 1, [Define for doing static link])
  AM_LDFLAGS="-static"
  AC_SUBST(AM_LDFLAGS)
fi


# ===================================================================
# Checks for libraries
# ===================================================================


# ===================================================================
# Checks for header files
# ===================================================================


# ===================================================================
# Checks for typedefs, structures, and compiler characteristics
# ===================================================================
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T


# ===================================================================
# Check for size of built-in types
# ===================================================================


# ===================================================================
# Check for QT
# It's a kind of magic!
# ===================================================================
AC_ARG_ENABLE([qt],
[  --enable-qt    Turn on QT],
[case "${enableval}" in
 yes) qt=true ;;
 no)  qt=false ;;
 *) AC_MSG_ERROR([bad value ${enableval} for --enable-qt]) ;;
 esac],[qt=false])
AM_CONDITIONAL([WITH_QT], [test x$qt = xtrue])
if test x$qt = xtrue; then
  AT_WITH_QT
fi


# ===================================================================
# Check for C++ language
# ===================================================================
AC_LANG_CPLUSPLUS


# ===================================================================
# Local definitions
# ===================================================================

YMTOOLS_SRCDIR="\$(top_srcdir)/../.."
YMTOOLS_BUILDDIR="\$(top_builddir)/../.."
AC_SUBST([YMTOOLS_SRCDIR])
AC_SUBST([YMTOOLS_BUILDDIR])


# ===================================================================
# Declare files to be generated by configure script
# ===================================================================
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([ym_cell/Makefile])
AC_CONFIG_FILES([mislib/Makefile])
AC_CONFIG_FILES([dotlib/Makefile])
AC_CONFIG_FILES([libdump/Makefile])
AC_CONFIG_FILES([tests/Makefile])
AC_CONFIG_FILES([tests/dotlib_ptview/Makefile])


# ===================================================================
# Generate configured files
# ===================================================================
AC_OUTPUT

# End-Of-File
